# rust-lambda

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  _typos.toml  cliff.toml  deny.toml  test.rest
.cargo/: config.toml
.github/workflows/: build.yml
api/: Cargo.toml
api/src/: main.rs
infra/: Pulumi.dev.yaml  Pulumi.yaml  api.ts  index.ts  package-lock.json  package.json  shared.ts  test.ts  utils.ts
infra1/: Pulumi.dev.yaml  Pulumi.yaml  api.ts  index.ts  package.json
infra1/lambda/: hosts.json
