[package]
name = "api"
version = "0.2.3"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
axum = { version = "0.6.15", features = ["http2", "headers", "query"] }
axum-aws-lambda = "0.4.0"
better-qs = "2.3.1"
bytes = { workspace = true }
lambda_http = { workspace = true }
lambda_runtime = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = "0.4.13"
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
